Cambio de estilos para móvil y solicitudes.

--- a/src/components/Lateral.css
+++ b/src/components/Lateral.css
@@ -205,4 +205,8 @@ a:focus .tab{
       #hamburgerMenu input:checked ~ ul {
         transform: none;
       }
+      
+      aside {
+        width: 3vw;
+      }
 }
