--- a/src/views/LandingAnalista.css
+++ b/src/views/LandingAnalista.css
@@ -90,6 +90,6 @@
         padding-left: 5vw;
         padding-right: 4%;
         height: 30vh;
-        width: 100%;
+        width: 87vw;
     }
 }
