--- a/src/components/plantillaInputs.css
+++ b/src/components/plantillaInputs.css
@@ -12,7 +12,7 @@
 }
 
 .inputFormularios{
-    font-size: 22px;
+    font-size: 1.2vw;
     font-weight: 600;
     font-family: 'Raleway';
     padding: 15px 30px;
@@ -23,6 +23,7 @@
     margin-left: 1%;
     margin-right: 1%;
     transition: border-color 0.2s;
+    height:1.5vw
 }
 
 .grupoInput {
@@ -45,7 +46,7 @@
     position: absolute;
     display: block;
     transition: 0.2s;
-    font-size: 22px;
+    font-size: 1.2vw;
     font-family: 'Raleway';
     color:rgb(118, 118, 118); 
     border-image: initial;
@@ -74,7 +75,7 @@
     top: -15%;
     display: block;
     transition: 0.4s;
-    font-size: 1rem;
+    font-size: 0.8vw;
     color: #0f123f;
     font-weight: 700;
 }
@@ -84,7 +85,7 @@
     top: -15%;
     display: block;
     transition: 1s;
-    font-size: 1rem;
+    font-size: 0.8vw;
     color: #0f123f;
     font-weight: 700;
 }
