Crea analistas completo, crea asesores pendiente

--- a/src/components/plantillaInputs.css
+++ b/src/components/plantillaInputs.css
@@ -127,4 +127,11 @@
     .input-gral{
         background: #F2F5FA;
     }
+    
+    .w-3{
+        width: 90%;
+    }
+    .w-2{
+        width: 90%;
+    }
 }
