--- a/src/views/ModalContactoAsesor.css
+++ b/src/views/ModalContactoAsesor.css
@@ -49,11 +49,18 @@
 
 .formulario{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: 'Raleway';
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     color: #000000;
+}
+
+.formulario .botonSalmon {
+    width: 40%;
 }
 
 .cont-contacto{
