--- a/src/components/plantillaInputs.css
+++ b/src/components/plantillaInputs.css
@@ -1,5 +1,5 @@
 .input-gral{
-    font-size: 22px;
+    font-size: 1.2vw;
     font-family: 'Raleway';
     padding: 15px 30px;
     border-style: none;
@@ -95,11 +95,11 @@
 }
 
 .w-3{
-    width: 25%;
+    width: 27%;
 }
 
 .w-2{
-    width: 40%;
+    width: 43%;
 }
 
 .w-1{
