--- a/src/components/Boton.css
+++ b/src/components/Boton.css
@@ -67,8 +67,8 @@ button:active {
     border: 2px solid #722C2D;
     color: white;
     font-weight: 550;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 10%;
+    padding-right: 10%;
     cursor: pointer;
 }
 
@@ -77,7 +77,7 @@ button:active {
 }
 
 #botonEliminarUsuario::after {
-    content: "Eliminar";
+    content: "Deshabilitar";
 }
 
 #botonEliminarUsuario:focus {
