--- a/src/views/ModalContactoAsesor.css
+++ b/src/views/ModalContactoAsesor.css
@@ -17,6 +17,21 @@
     z-index: 5;
 }
 
+.closingModalButton {
+    background-color: #C4C4C4;
+    border-radius: 50%;
+    color: white;
+    border: none;
+    width: 2vw;
+    height: 2vw;
+    cursor: pointer;
+    position: relative;
+    left: 45%;
+    top: 25%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5vh;
+}
+
 .modal{
     padding: 20px;
     background-color: #E5E5E5;
