--- a/src/components/Boton.css
+++ b/src/components/Boton.css
@@ -358,6 +358,12 @@ button:active {
     transform: scale(.98);
 }
 
+.botonSalmon:disabled{
+    background-color: #8b8b8b;
+    border: 2px solid #8b8b8b;
+    cursor:not-allowed;
+}
+
 @media only screen and (max-width: 576px) {
     #botonEditarUsuario {
         background-color: transparent;
