--- a/src/views/ModalContactoAsesor.css
+++ b/src/views/ModalContactoAsesor.css
@@ -149,6 +149,13 @@
         font-weight: bold;
     }
    
+    .closingModalButton {
+        width: 20px;
+        height: 20px;
+        position: relative;
+        left: 45%;
+        top: 2%;
+    }
 }
 
 
