--- a/src/views/ModalContactoAsesor.css
+++ b/src/views/ModalContactoAsesor.css
@@ -20,16 +20,18 @@
 .closingModalButton {
     background-color: #C4C4C4;
     border-radius: 50%;
-    color: white;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
     border: none;
     width: 2vw;
     height: 2vw;
     cursor: pointer;
     position: relative;
+    text-align: center;
     left: 45%;
     top: 25%;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2.5vh;
+    font-size: 80%;
 }
 
 .modal{
@@ -116,10 +118,11 @@
         justify-content: center;
         text-align: center;
     }
+
     .modal{
         width: 75vw;
         margin-top: -10vh;
-        height: 80vh;
+        height: 85%;
         padding: 10px 20px;
         
     }
@@ -156,6 +159,11 @@
         left: 45%;
         top: 2%;
     }
+
+    .btnModal{
+        width: 90% !important;
+    }
+    
 }
 
 
