Se añade barra de búsqueda

--- a/src/components/plantillaInputs.css
+++ b/src/components/plantillaInputs.css
@@ -197,6 +197,7 @@
   
   .inputFormularios:not(:placeholder-shown) ~ .etiquetaInputs {
     color: #f2f5fa;
+    font-size: 15px;
   }
 
   .input-gral {
