--- a/src/views/SeguimientoCliente2.css
+++ b/src/views/SeguimientoCliente2.css
@@ -22,3 +22,10 @@
 .mainContentPageSeguimiento form .btn-guardar-cambios {
     width: 20vw;
 }
+
+@media (max-width: 576px)
+{
+    .mainContentPageSeguimiento form{
+        width: 80vw !important;
+    }
+}
