--- a/src/components/TablaProspectos.css
+++ b/src/components/TablaProspectos.css
@@ -79,22 +79,19 @@ h5 {
 	}
 }
 
-.tablaProspectos::-webkit-scrollbar-track
-{
+.tablaProspectos::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 6px #F2F5FA;
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px #F2F5FA;
 	background-color: #F2F5FA;
 }
 
-.tablaProspectos::-webkit-scrollbar
-{
+.tablaProspectos::-webkit-scrollbar {
 	width: 6px;
 	background-color: #F2F5FA;
 }
 
-.tablaProspectos::-webkit-scrollbar-thumb
-{
+.tablaProspectos::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	background-color: #C4C4C4;
 }
